# ros

./: .gitmodules  IMU 보드 업데이트.md  IMU.md  README.md  ROS2 의 특징.md  angle_keyboard.py  angle_test.py  keysub.py  mqttTest.py  pubmqtt.py
catkin_ws/devel/include/ros_service/: SrvTutorial.h  SrvTutorialRequest.h  SrvTutorialResponse.h
catkin_ws/devel/include/ros_topic_test/: MsgTutorial.h
catkin_ws/devel/lib/pkgconfig/: ros_service.pc  ros_topic_test.pc
catkin_ws/devel/lib/python2.7/dist-packages/ros_service/srv/: _SrvTutorial.py
catkin_ws/devel/lib/python2.7/dist-packages/ros_topic_test/msg/: _MsgTutorial.py
catkin_ws/devel/lib/ros_service/: service_client  service_server
catkin_ws/devel/lib/ros_topic_test/: topic_publisher  topic_subscriber
catkin_ws/devel/share/common-lisp/ros/ros_service/srv/: SrvTutorial.lisp  _package.lisp  ros_service-srv.asd
catkin_ws/devel/share/common-lisp/ros/ros_topic_test/msg/: MsgTutorial.lisp  _package.lisp  _package_MsgTutorial.lisp  ros_topic_test-msg.asd
catkin_ws/devel/share/gennodejs/ros/ros_service/srv/: SrvTutorial.js
catkin_ws/devel/share/gennodejs/ros/ros_topic_test/msg/: MsgTutorial.js
catkin_ws/devel/share/ros_service/cmake/: ros_serviceConfig.cmake
catkin_ws/devel/share/ros_topic_test/cmake/: ros_topic_test-msg-paths.cmake  ros_topic_testConfig.cmake
catkin_ws/devel/share/roseus/ros/ros_service/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_service/srv/: SrvTutorial.l
catkin_ws/devel/share/roseus/ros/ros_topic_test/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_topic_test/msg/: MsgTutorial.l
catkin_ws/src/: +
catkin_ws/src/ros_service/: CMakeLists.txt  package.xml
catkin_ws/src/ros_service/src/: service_client.cpp  service_server.cpp
catkin_ws/src/ros_service/srv/: SrvTutorial.srv
catkin_ws/src/ros_topic_test/: CMakeLists.txt
catkin_ws/src/ros_topic_test/src/: pub_topic.cpp  sub_topic.cpp
전파교육 정리/: IMU.md  경로 알고리즘.md  사이트 링크 모음.md  전파 교육 준비.md
전파교육 정리/Jetson 보드 활용 프로그래밍 교육/: 1일차.md  2일차.md  3일차.md  jetson  기본 정보.md
전파교육 정리/ROS NAVIGATION IN 5 DAYS/: ROS NAVIGATION IN 5 DAYS #1 - Course Overview & Basics Concepts
